fix(grid): icon group overlapped by text in IE11

--- a/src/core/styles/components/grid/_grid-theme.scss
+++ b/src/core/styles/components/grid/_grid-theme.scss
@@ -325,6 +325,7 @@
         display: flex;
         align-items: center;
         user-select: none;
+        min-width: 39px; /* sort-icon width + filtering toggle icon width */
         height: 24px;
 
         .sort-icon {
